fix overflow scroll in messages

--- a/app/assets/stylesheets/pages/_chatrooms.scss
+++ b/app/assets/stylesheets/pages/_chatrooms.scss
@@ -21,6 +21,7 @@
 
   .chatrooms {
     height: calc(100% - 54px);
+    overflow-y: scroll;
 
     ul {
       list-style: none;
